Changes in semPLS version 1.0-11

 o now it is possible to specify cross loadings in the measurement 
   model


Changes in semPLS version 1.0-10

 o fixed code in vignette 'semPLS-intro' due to changes in sem 3.1-0
   

Changes in semPLS version 1.0-9

 o Added a slighltly modified version of the JSS paper publication
   about semPLS as vignette. 

 o Renamed Author@R to Authors@R in DESCRIPTION file.

 o Fixed bug in rSquared2(). The corrected R-squared was erroneously
   correcting for an intercept as well.

 o Fixed bugs in gof(), print.communality(), print.rSquared2(). The
   divisor for the averages was wrong.


Changes in semPLS version 1.0-8

 o added references for JSS publication 'semPLS: Structural Equation
   Modeling Using Partial Least Squares'. See citation("semPLS").


Changes in semPLS version 1.0-7

 o Fixed bug in qSquared(). Results from qSquared() prior to this version are
   wrong.


Changes in semPLS version 1.0-6

 o parallel.bootsempls() deprecated in favour of parallelplot.bootsempls(),
   to stay in line with the lattice package.


Changes in semPLS version 1.0-5

  o Fixed bug that occured when the names for the parameters are not unique. 
    For example the first LV has 11 MVs than the name for the 11th MVs loading
    was 'lam111' - thus the same as for the 11th LV first MVs loading. The 
    indizes of the parameters such as 'lam11', etc., are now sepperated by
    an underscore resulting in, e.g., 'lam_1_1' for the loading of the first LVs
    first MV.
    The same applies to 'gamIJ' which is now 'gam_I_J' and to 'betaIJ' which is
    now 'beta_I_J' with 'I' and 'J' the respective indizes.


Changes in semPLS version 1.0-4

  o adaptions due to deprecated functions in sem (>= 2.0.0)


Changes in semPLS version 1.0-3

  o fixed bug in 'bootsempls' with argument 'method = "ConstructLevelChanges"': 
    "Error in outer_weights[b, ] <- res$outer_weights[res$outer_weights !=  : 